package ma.oralCare.repository.rdv.api;

import ma.oralCare.entities.rdv.RDV;
import ma.oralCare.repository.common.CrudRepository;

public interface RDVRepository extends CrudRepository<RDV, Long> {
}


